--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,7 @@ flutter:
   # https://flutter.dev/assets-and-images/#resolution-aware
 
   assets:
-    - assets/img/logo-emotion.png
+    - assets/img/
 
 
 
