--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   image_picker: ^0.8.4+2
   cached_network_image: ^3.1.0
   carousel_slider: ^4.2.1
+  camera: ^0.10.0+5
+  qr_flutter: ^4.0.0
+  flutter_countdown_timer: ^4.1.0
 
 
 
