--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   auto_size_text: ^3.0.0
   device_preview: ^1.1.0
-  video_player:
+  video_player: ^2.4.10
+  path_provider: ^2.0.11
+  #open_file: ^2.1.1
 
 
 
