--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,30 +9,45 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
 
+#Firebase
   firebase_core: ^2.1.1
   cloud_firestore:
   firebase_auth:
   google_sign_in: ^5.3.0
   firebase_storage: ^11.0.6
 
-  http: ^0.13.5
-  get: ^4.6.5  
-  equatable: ^2.0.5
+#UI
   page_indicator: ^0.4.1
   flutter_hooks: 
   image_picker: ^0.8.4+2
   cached_network_image: ^3.1.0
   carousel_slider: ^4.2.1
   camera: ^0.10.0+5
-  qr_flutter: ^4.0.0
   flutter_countdown_timer: ^4.1.0
+  simple_circular_progress_bar: ^1.0.2
   auto_size_text: ^3.0.0
   device_preview: ^1.1.0
   video_player: ^2.2.6
-  path_provider: ^2.0.11
-  simple_circular_progress_bar: ^1.0.2
 
-  #open_file: ^2.1.1
+#Model
+  uuid: ^3.0.6
+  equatable: ^2.0.5
+  qr_flutter: ^4.0.0
+  path_provider: ^2.0.11
+
+#Util 
+  http: ^0.13.5
+  get: ^4.6.5  
+
+
+
+#Debug
+  chalkdart: ^2.0.8
+
+
+
+
+#open_file: ^2.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
