--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_auth:
   google_sign_in: ^5.3.0
   firebase_storage: ^11.0.6
+  flutter_secure_storage: ^4.0.2
 
 #UI
   page_indicator: ^0.4.1
@@ -25,6 +26,9 @@ dependencies:
   camera: ^0.10.0+5
   simple_circular_progress_bar: ^1.0.2
   video_player: ^2.2.6 #^2.4.7
+  flutter_svg: ^0.22.0
+  otp_text_field: ^1.1.3
+  timer_button: ^2.0.0
 
 #Video
   ffmpeg_kit_flutter_video: 5.1.0-LTS
@@ -40,8 +44,7 @@ dependencies:
 
 #Util 
   http: ^0.13.5
-  get: ^4.6.5  
-
+  get: ^4.6.5
 
 
 #Debug
