splash and details

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.emotion_cam_360">
+                                    <!--agregue package="com.example.emotion_cam_360" para corregir un error-->
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="emotion_cam_360"
