--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/img/
+    - assets/themes/
   fonts:
     - family: Raleway
       fonts:
