--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   firebase_auth:
   google_sign_in: ^5.3.0
   firebase_storage: ^11.0.6
-  flutter_secure_storage: ^4.0.2
+
 
 #UI
   page_indicator: ^0.4.1
@@ -25,16 +25,16 @@ dependencies:
   carousel_slider: ^4.2.1
   camera: ^0.10.0+5
   simple_circular_progress_bar: ^1.0.2
-  video_player: ^2.2.6 #^2.4.7
   flutter_svg: ^0.22.0
   otp_text_field: ^1.1.3
   timer_button: ^2.0.0
+  file_picker: ^5.2.5
 
 #Video
   ffmpeg_kit_flutter_video: 5.1.0-LTS
   path: ^1.8.1
   fluttertoast: ^8.0.9
-
+  video_player: ^2.2.6 #^2.4.7
 
 #Model
   uuid: ^3.0.6
@@ -42,15 +42,19 @@ dependencies:
   qr_flutter: ^4.0.0
   path_provider: ^2.0.11
 
+#Persistencia de Datos
+  flutter_secure_storage: ^4.0.2
+  sqflite: ^2.2.2
+  provider: ^6.0.5
+
 #Util bd and State Managment
   http: ^0.13.5
   get: ^4.6.5
-  sqflite: ^2.2.2
 
 
 #Debug
   chalkdart: ^2.0.8
-  provider: ^6.0.5
+
 
 
 
