--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   otp_text_field: ^1.1.3
   timer_button: ^2.0.0
   file_picker: ^5.2.5
+  liquid_progress_indicator: ^0.4.0
 
 #Video
   ffmpeg_kit_flutter_video: 5.1.0-LTS
