--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ publish_to: 'none'
 version: 1.0.0+1
 environment:
   sdk: ">=2.17.5 <3.0.0"
+dependency_overrides:
+  ffi: ^2.0.1
 dependencies:
   flutter:
     sdk: flutter
@@ -30,6 +32,7 @@ dependencies:
   timer_button: ^2.0.0
   file_picker: ^4.0.0
   liquid_progress_indicator: ^0.4.0
+  share_plus: ^6.3.0
 
 #Video
   ffmpeg_kit_flutter_video: 5.1.0-LTS
