--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,12 @@ dependencies:
   image_picker: ^0.8.4+2
   cached_network_image: ^3.1.0
   carousel_slider: ^4.2.1
-  camera: ^0.10.0+5
+  camera: ^0.10.3
   simple_circular_progress_bar: ^1.0.2
-  flutter_svg: ^0.22.0
+  flutter_svg: ^1.1.6
   otp_text_field: ^1.1.3
   timer_button: ^2.0.0
-  file_picker: ^4.0.0
+  file_picker: ^5.2.5
   liquid_progress_indicator: ^0.4.0
   share_plus: ^6.3.0
 # gmo_media_picker: ^0.0.1
@@ -39,7 +39,7 @@ dependencies:
 
 
 #Video
-  ffmpeg_kit_flutter_video: 5.1.0-LTS
+  ffmpeg_kit_flutter_video: ^5.1.0
   path: ^1.8.1
   fluttertoast: ^8.0.9
   video_player: ^2.2.6 #^2.4.7
@@ -51,7 +51,7 @@ dependencies:
   path_provider: ^2.0.11
 
 #Persistencia de Datos
-  flutter_secure_storage: ^4.0.2
+  flutter_secure_storage: ^7.0.1
   sqflite: ^2.2.2
   provider: ^6.0.5
 
