--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
-org.gradle.jvmargs=-Xmx4608m
+# org.gradle.jvmargs=-Xmx4608m
+#   android.useAndroidX=true
+#   android.enableJetifier=true
+  
+org.gradle.jvmargs=-Xmx1536M
+android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
