--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,7 +2,8 @@
 #   android.useAndroidX=true
 #   android.enableJetifier=true
   
-org.gradle.jvmargs=-Xmx1536M
+#org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx1536m -Duser.country=US -Duser.language=en 
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
