--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ lib/generated_plugin_registrant.dart
 # Symbolication related
 app.*.symbols
 
+
+/key
+*.jsk
 # Obfuscation related
 app.*.map.json
 
