--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,10 +105,10 @@ flutter_icons:
     image_path: "assets/icon/logo-emotion.png"
     background_color: "#ffff"
 
-  windows:
-    generate: true
-    image_path: "assets/icon/logo-emotion.png"
-    icon_size: 48 # min:48, max:256, default: 48
-  macos:
-    generate: true
-    image_path: "assets/icon/logo-emotion.png"       
+  #windows:
+  #  generate: true
+  #  image_path: "assets/icon/logo-emotion.png"
+  #  icon_size: 48 # min:48, max:256, default: 48
+  #macos:
+  #  generate: true
+  #  image_path: "assets/icon/logo-emotion.png"       
