--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
 # gmo_media_picker: ^0.0.1
 # wechat_assets_picker: ^8.3.1+1
 # gmo_media_picker: ^0.0.4
-  modal_progress_hud_nsn: ^0.4.0
+# modal_progress_hud_nsn: ^0.4.0
 
 #Video
 #  ffmpeg_kit_flutter: 5.1.0 --enable-gpl
