--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   liquid_progress_indicator_v2: ^0.5.0
   flutter_native_splash: ^2.3.2
   share_plus: ^7.1.0
+  animations: ^2.0.3
 # gmo_media_picker: ^0.0.1
 # wechat_assets_picker: ^8.3.1+1
 # gmo_media_picker: ^0.0.4
@@ -85,6 +86,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/img/
+    - assets/introduction_animation/
     - assets/themes/
     - assets/img/bien.png
   fonts:
