--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,11 @@ dependencies:
   otp_text_field: ^1.1.3
   timer_button: ^2.0.0
   file_picker: ^5.2.5
-#  liquid_progress_indicator: ^0.4.0
   liquid_progress_indicator_v2: ^0.5.0
   flutter_native_splash: ^2.3.2
   share_plus: ^7.1.0
   animations: ^2.0.3
+  shared_preferences: ^2.2.1
 # gmo_media_picker: ^0.0.1
 # wechat_assets_picker: ^8.3.1+1
 # gmo_media_picker: ^0.0.4
