--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,7 +3,7 @@
 #   android.enableJetifier=true
   
 #org.gradle.jvmargs=-Xmx1536m
-org.gradle.jvmargs=-XX:MaxHeapSize=256m -Xmx256m
+org.gradle.jvmargs=-Xmx4096M -Duser.country=US -Duser.language=en -XX:MaxHeapSize=256m
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
