--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,8 +3,9 @@
 #   android.enableJetifier=true
   
 #org.gradle.jvmargs=-Xmx1536m
-org.gradle.jvmargs=-Xmx4608m
+#org.gradle.jvmargs=-Xmx4608m
 #org.gradle.jvmargs=-XX:MaxHeapSize=256m -Xmx256m
+org.gradle.jvmargs=-Xmx4G
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
